Updated to reflect Reid's suggestions on the pull request: sscpac/chat-locker/pull/40. 1) Added logic to collapse to make sure there was at least 1 room/direct message/channel before adding the collapsible icon. 2) Aligned the collapsable icons to the icons above them.

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -3343,12 +3343,14 @@ select.form-control + .chosen-container-multi .chosen-results li.result-selected
 	position: absolute;
 }
 a.collapse:after {
-    font-family:'Glyphicons Halflings';
-    content:"\e113";
-    float: left;
-		font-size: 8pt;
-    color: @tertiary-font-color;
+	margin-left: .5em;
+  font-family:'Glyphicons Halflings';
+  content:"\e113";
+  float: left;
+	font-size: 8pt;
+  color: @tertiary-font-color;
 }
 a.collapsed:after {
-    content:"\e114";
+	margin-left: .5em;
+  content:"\e114";
 }
